--- a/app/views/home/home.ejs
+++ b/app/views/home/home.ejs
@@ -467,4 +467,5 @@
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
     <script src="/js/main.js"></script>
+    <script>document.getElementById('current-page').textContent = 'Home';</script>
 </main>
