--- a/app/views/home/marketplace.ejs
+++ b/app/views/home/marketplace.ejs
@@ -167,3 +167,4 @@
             </div>
         </div>
     </section>
+    <script>document.getElementById('current-page').textContent = 'Loja';</script>
