--- a/app/views/home/about.ejs
+++ b/app/views/home/about.ejs
@@ -215,3 +215,4 @@
             </div>
         </div>
     </section>
+    <script>document.getElementById('current-page').textContent = 'Sobre';</script>
