--- a/app/views/home/header.ejs
+++ b/app/views/home/header.ejs
@@ -15,7 +15,7 @@
                     <li><a href="/home/pets">Pets</a></li>
                     <li><a href="/home/loja">Loja</a></li>
                     <li><a href="/home/sobre">Sobre</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="/home/contato">Contato</a></li>
                 </ul>
 
                 <div class="hamburger" id="hamburger">
@@ -33,5 +33,6 @@
                     </ul>
                 </div>
             </nav>
+        </div>
         </div>
     </header>
