alteração dos formularios de login

--- a/app/views/home/header.ejs
+++ b/app/views/home/header.ejs
@@ -29,8 +29,8 @@
                 <div class="menu-icone">
                     <i class="fa-solid fa-user" aria-hidden="true"></i>
                     <ul class="menu-opcoes">
-                        <li><a href="/login">Entrar</a></li>
-                        <li><a href="cadastro.html">Cadastrar</a></li>
+                        <li><a href="/login1">Entrar</a></li>
+                        <li><a href="/nova-conta">Cadastrar</a></li>
                     </ul>
                 </div>
             </nav>
