--- a/app/views/nova-conta/boas-vindas.ejs
+++ b/app/views/nova-conta/boas-vindas.ejs
@@ -1,8 +1,25 @@
-<main>
-    <h1>logo aqui</h1>
-    <h3>mensagem de boas vindas</h3>
-    <h5>outras mensagens de boa vinda</h5>
-    <a href="/nova-conta/avisos">SEGUINTE</a>
-    <p>imgame de exemplo</p>
-    <img src="/img/boas-vindas.jpeg">
-</main>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Criar Conta - Aventura Pet</title>
+    <link rel="stylesheet" href="/css/login1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<body>
+    <img class="logo" src="/img/logo aventura pet.png" alt="logo aventura pet">
+    <br>
+    <h3>Bem-vindo ao Aventura Pet!</h3>
+    <p>Estamos felizes em tê-lo aqui. Vamos começar a criar sua conta para que você possa adotar ou doar pets incríveis.</p>
+    <% if (session.strErrorMsg) { %>
+        <p style="color: red;"><%= session.strErrorMsg %></p>
+    <% } %>
+    <br>
+    <a href="/login/login1" style="text-decoration: none;">
+        <button class="continue-button">SEGUINTE</button>
+    </a>
+    <br>
+    <h2><a style="text-decoration: none; color: #00376b;" href="/login1">Voltar ao Login</a></h2>
+</body>
+</html>
