--- a/app/views/home/home.ejs
+++ b/app/views/home/home.ejs
@@ -220,7 +220,7 @@
                 </div>
             </div>
             <div class="section-footer">
-                <a class="view-more-btn" href="pets.html">
+                <a class="view-more-btn" href="/app/views/home/pets.ejs">
                     <span>Ver Todos os Pets</span>
                     <i class="fas fa-arrow-right"></i>
                 </a>
@@ -472,6 +472,14 @@
     <!-- Loading Spinner -->
     <div class="loading-spinner" id="loadingSpinner">
         <div class="spinner"></div>
+    </div>
+
+    <!-- Custom Alert -->
+    <div class="custom-alert" id="customAlert">
+        <div class="alert-content">
+            <i class="fas fa-check-circle"></i>
+            <span>Mensagem enviada com sucesso! Entraremos em contato em breve.</span>
+        </div>
     </div>
 
     <!-- Scripts -->
